Made some changes

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+
 	</head>
 	<body class="is-preload">
 
@@ -44,7 +45,9 @@
 				<div class="container">
 					<header>
 						<h2>All about me!</h2>
-						<p>I am currently a Sophomore studying Computer Science + Economics at UIUC. My interests lie in AI/ML and Cybersecurity. Some of my hobbies include running and dancing!</p>
+						<p>I am currently a Sophomore studying Computer Science + Economics at UIUC. My interests lie in AI/ML and Cybersecurity. Some of my hobbies include running and dancing! I have also consistently focused on my public speakig skills for the past 5+ years. Some of my accomplishments include performing at Monologue Shows in high school and winning various Sikh Youth Speech Symposiums. </p>
+
+
 					</header>
 					<div class="row aln-center">
 
@@ -57,23 +60,29 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 
-								<span class="icon featured fa-comments"></span>
+								<span class=> </span>
+								<img src="images/nokia.webp" alt="Vice President - Women in Cybersecurity" width="100" height="100">
 								<h3>Automation Intern at Nokia Networks</h3>
+								<p> Skills: Python flask, Angular, Dbeaver</p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
-								<span class="icon solid featured fa-camera-retro"></span>
+								<img src="images/images.png" alt="Vice President - Women in Cybersecurity" width="100" height="100">
+								<span class=></span>
 								<h3>Data Analyst Intern at ATLAS - UIUC</h3>
+								<p> Skills: Tableau</p>
+
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
-								<span class="icon featured fa-thumbs-up"></span>
+								<img src="images/wicys-transparent-logo.png" alt="Vice President - Women in Cybersecurity" width="100" height="100">
 								<h3>Vice President - Women in Cybersecurity - UIUC</h3>
+								<p> Skills: Cybersecurity, Research</p>
 							</section>
 						</div>
-					</div>
+						
 					<footer>
 						<a href="#portfolio" class="button large scrolly">See some of my recent work</a>
 					</footer>
@@ -89,32 +98,55 @@
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="" alt="" /></a>
+								<span class="icon solid featured fa-plant-wilt">
+
+								<a href="#" class=""></a>
 								<h3><a href="#">Bloom Buddy</a></h3>
+							</span>
+
 								<p> A gardening app that uses machine learning algorithms to provide recommendations for plants </p>
+								<h4> </h4>
+
+
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
+								<span class="icon solid featured fa-plant-wilt">
 								<a href="#" class="image featured"><img src="" alt="" /></a>
 								<h3><a href="#">Career Compass</a></h3>
+							</span>
 								<p>An app that makes the career fair process easier to navigate by providing a map layout of companies involved</p>
+								<h4>  </h4>
+
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
+								<span class="icon solid featured fa-plant-wilt">
+
 								<a href="#" class="image featured"><img src="" alt="" /></a>
 								<h3><a href="#">Rhythmic Smiles</a></h3>
+							</span>
+
 								<p>A workout music app that curates playlists based on the pace of your workout</p>
+								<h4>  </h4>
+
 							</article>
 						</div>
-						<!-- <div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-								<h3><a href="#">Tempus dolore</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
-							</article>
-						</div> -->
+						<div class="container">
+
+<header>
+						<h3>Watch my monologue show performances!</h3>
+					</header>
+</div>
+
+						<div class="video-container">
+								<iframe width="420" height="315" src="https://www.youtube.com/embed/kialJ0uAobY?si=9W67Vlt-cTr-UXfM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+								<iframe width="420" height="315" src="https://www.youtube.com/embed/r70JmkYzc88?si=w7vCaTQ7zdDNptej" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+
+						</div>
 						<!-- <div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
@@ -137,9 +169,11 @@
 				</div>
 			</article>
 
+			
+
 		<!-- Contact -->
 			<article id="contact" class="wrapper style4">
-				<!-- <div class="container medium">
+				<div class="container medium">
 					<header>
 						<h2>Contact me!</h2>
 					</header>
@@ -167,7 +201,7 @@
 									</div>
 								</div>
 							</form>
-						</div> -->
+						</div> 
 						<!-- <div class="col-12">
 							<hr />
 							<h3>Find me on ...</h3>
@@ -207,3 +241,16 @@
 
 	</body>
 </html>
+
+<style>
+	.video-container {
+		display: flex;
+		justify-content: space-between;
+		justify-content: center; /* Center the videos horizontally */
+		gap: 150px; /* Adjust spacing between videos */
+	}
+	.video-container iframe {
+		width: 500px; /* Fixed width for each iframe */
+		height: 315px; /* Fixed height for each iframe */
+	}
+</style>
